--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "@angular/router": "^5.0.0",
     "bootstrap": "^3.3.7",
     "core-js": "^2.4.1",
+    "font-awesome": "^4.7.0",
     "jsrsasign": "^8.0.4",
+    "primeng": "^5.0.2",
     "rxjs": "^5.5.2",
     "zone.js": "^0.8.14"
   },
